// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thresholds NumberTH Data should be new 1`] = `
Object {
  "color": "rgba(245, 54, 54, 0.9)",
  "comparator": "eq",
  "level": 0,
  "value": 50,
}
`;

exports[`Thresholds StringTH Data should be new 1`] = `
Object {
  "color": "rgba(245, 54, 54, 0.9)",
  "comparator": "eq",
  "level": 0,
  "value": "/.*/",
}
`;
